Spacing issue

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -21,7 +21,7 @@
   font-weight: 400;
   line-height: 12px;
   color: $red;
-  padding: 10px 0 10px;
+  padding: 8px 0 8px;
   display: inline-block;
 }
 .articleTitles {
